--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "fedora23-cloud"
   config.vm.box_url = "https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-Vagrant-23-20151030.x86_64.vagrant-virtualbox.box"
 
-  config.vm.provision :shell, :path => "./provisioning/dnf-settings.sh"
-  config.vm.provision :shell, :path => "provisioning/dnf-update.sh"
-  config.vm.provision :shell, :path => "./provisioning/install-ansible.sh"
+  config.vm.provision :ansible_local do |ansible|
+    ansible.playbook = "./provisioning/setup.yml"
+  end
 end
