--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,6 +6,6 @@ Vagrant.configure(2) do |config|
   config.vm.box_url = "https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-Vagrant-23-20151030.x86_64.vagrant-virtualbox.box"
 
   config.vm.provision :ansible_local do |ansible|
-    ansible.playbook = "./provisioning/setup.yml"
+    ansible.playbook = "./provisioning/site.yml"
   end
 end
