--- a/vagrant/provisioning/site.yml
+++ b/vagrant/provisioning/site.yml
@@ -40,6 +40,7 @@
         - vim
         - vlc
         - wget
+        - zsh
 
     - name: install atom
       shell: wget -O /tmp/atom.rpm https://atom.io/download/rpm && dnf -y install /tmp/atom.rpm creates=/usr/share/atom/version
