--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -5,9 +5,9 @@ Vagrant.configure(2) do |config|
   config.vm.box = "fedora23-cloud"
   config.vm.box_url = "https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-Vagrant-23-20151030.x86_64.vagrant-virtualbox.box"
 
-  config.vm.provision :shell, :inline => "useradd tanabe"
+  config.vm.provision :shell, :inline => "useradd tanabe && echo higehige | passwd --stdin tanabe && usermod tanabe -a -G wheel"
 
-  config.vm.provision :ansible_local do |ansible|
-    ansible.playbook = "./provisioning/site.yml"
-  end
+  # config.vm.provision :ansible_local do |ansible|
+  #   ansible.playbook = "./provisioning/site.yml"
+  # end
 end
