--- a/.zsh/.zshrc.env
+++ b/.zsh/.zshrc.env
@@ -34,6 +34,9 @@ setopt list_packed
 # no remove postfix slash of command line
 setopt noautoremoveslash
 
+# no beep sound
+setopt no_beep
+
 # no beep sound when complete list displayed
 setopt nolistbeep
 
