Add gnome settings

--- a/site.yml
+++ b/site.yml
@@ -37,8 +37,10 @@
         - flash-plugin
         - gcc
         - git
+        - gnome-tweak-tool
         - google-chrome-stable
         - hexchat
+        - ibus-mozc
         - java-1.8.0-openjdk-devel
         - java-1.8.0-openjdk-debuginfo
         - jq
@@ -133,4 +135,24 @@
 
     - name: Copy .inputrc
       copy: src=./.inputrc dest=/home/tanabe/.inputrc
+      become: no
+
+    - name: No caps
+      command: gsettings set org.gnome.desktop.input-sources xkb-options "['ctrl:nocaps']"
+      become: no
+
+    - name: Show log out
+      command: gsettings set org.gnome.shell always-show-log-out true
+      become: no
+
+    - name: Show date
+      command: gsettings set org.gnome.desktop.interface clock-show-date true
+      become: no
+
+    - name: Update user dirs names to English
+      shell: LANG=C xdg-user-dirs-update --force
+      become: no
+
+    - name: Remove Japansese folder
+      command: rm -fr 音楽 画像 公開 ダウンロード テンプレート デスクトップ ドキュメント ビデオ
       become: no
