--- a/site.yml
+++ b/site.yml
@@ -1,159 +1,13 @@
 - hosts: localhost
   connection: local
   become: yes
-  tasks:
-    - name: install libselinux-python
-      shell: dnf -y install libselinux-python creates=/usr/lib64/python2.7/site-packages/selinux
-
-    - name: use fastest mirror
-      lineinfile: dest=/etc/dnf/dnf.conf line="fastestmirror=true"
-
-    - name: clean dnf cache
-      shell: dnf clean all
-
-    - name: install python-dnf
-      shell: dnf -y install python-dnf
-
-    - name: update packages
-      dnf: name=* state=latest
-
-#    - name: add dropbox repo
-#      copy: src=./repos/dropbox.repo dest=/etc/yum.repos.d/dropbox.repo
-
-    - name: add google-chrome repo
-      copy: src=./repos/google-chrome.repo dest=/etc/yum.repos.d/google-chrome.repo
-
-    - name: add rpmfusion repo
-      dnf: name=http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-stable.noarch.rpm
-
-    - name: add rpmfusion repo
-      dnf: name=http://linuxdownload.adobe.com/adobe-release/adobe-release-x86_64-1.0-1.noarch.rpm
-
-    - name: install packages
-      dnf: name={{item}} enablerepo=fedora-debuginfo state=latest
-      with_items:
-        - docker
-        - https://www.dropbox.com/download?dl=packages/fedora/nautilus-dropbox-2015.10.28-1.fedora.x86_64.rpm
-        - flash-plugin
-        - gcc
-        - git
-        - gnome-tweak-tool
-        - google-chrome-stable
-        - hexchat
-        - ibus-mozc
-        - java-1.8.0-openjdk-devel
-        - java-1.8.0-openjdk-debuginfo
-        - jq
-        - kernel-devel
-        - make
-        - unzip
-        - https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1_x86_64.rpm
-        - vim
-        - vlc
-        - wget
-        - zsh
-
-    - name: install atom
-      shell: wget -O /tmp/atom.rpm https://atom.io/download/rpm && dnf -y install /tmp/atom.rpm creates=/usr/share/atom/version
-
-    - name: download idea
-      get_url: url=https://download.jetbrains.com/idea/ideaIU-15.0.3.tar.gz dest=/tmp/ideaIU-15.0.3.tar.gz
-
-    - name: unarchive idea
-      unarchive: src=/tmp/ideaIU-15.0.3.tar.gz dest=/opt/ copy=no
-
-    - name: create sym link idea
-      shell: ln -s /opt/`ls /opt/ | grep idea` /opt/idea creates=/opt/idea
-
-    - name: change idea vmoptions
-      copy: src=./idea/idea64.vmoptions dest=/opt/idea/bin/idea64.vmoptions
-
-    - name: add idea icon
-      copy: src=./idea/idea.desktop dest=/usr/share/applications/idea.desktop
-
-    - name: start and enable docker
-      service: name=docker state=started enabled=yes
-
-    - name: Download peco
-      get_url: url=https://github.com/peco/peco/releases/download/v0.3.5/peco_linux_amd64.tar.gz dest=/tmp/peco.tar.gz
-
-    - name: Unarchive peco
-      unarchive: src=/tmp/peco.tar.gz dest=/tmp/ copy=no
-
-    - name: Copy peco binary
-      command: cp /tmp/peco_linux_amd64/peco /usr/local/bin/ creates=/usr/local/bin/peco
-
-    - name: change my default shell to zsh
-      user: name=tanabe shell=/bin/zsh
-
-    - name: Check if zplug is installed
-      shell: test -e /home/tanabe/.zplug/zplug && echo "yes" || echo "no"
-      register: is_zplug_installed
-
-    - name: Install zplug
-      when: is_zplug_installed.stdout == "no"
-      shell: curl -fLo ~/.zplug/zplug --create-dirs git.io/zplug
-      become: no
-
-    - name: Copy .zshrc
-      copy: src=./.zshrc dest=/home/tanabe/.zshrc
-      become: no
-
-    - name: Copy zsh settings
-      copy: src=./.zsh dest=/home/tanabe
-      become: no
-
-    # https://gist.github.com/emilio2hd/c910661bff37246bee17
-    - name: check if sdkman is installed
-      shell: test -d /home/tanabe/.sdkman && echo "yes" || echo "no"
-      register: is_sdkman_installed
-
-    - name: install SDKMAN
-      when: is_sdkman_installed.stdout == "no"
-      shell: curl -s get.sdkman.io | zsh executable=/bin/zsh
-      become: no
-
-    - name: install maven
-      shell: source ~/.zshrc && yes | sdk install maven
-      become: no
-
-    - name: install gradle
-      shell: source ~/.zshrc && yes | sdk install gradle
-      become: no
-
-    - name: Check if NeoBundle is installed
-      shell: test -d /home/tanabe/.vim/bundle && echo "yes" || echo "no"
-      register: is_neobundle_installed
-
-    - name: Install NeoBundle
-      when: is_neobundle_installed.stdout == "no"
-      shell: curl -s https://raw.githubusercontent.com/Shougo/neobundle.vim/master/bin/install.sh | zsh executable=/bin/zsh
-      become: no
-
-    - name: Copy .vimrc
-      copy: src=./.vimrc dest=/home/tanabe/.vimrc
-      become: no
-
-    - name: Copy vim settings
-      copy: src=./.vim dest=/home/tanabe
-      become: no
-
-    - name: Copy .gitconfig
-      copy: src=./.gitconfig dest=/home/tanabe/.gitconfig
-      become: no
-
-    - name: Copy .inputrc
-      copy: src=./.inputrc dest=/home/tanabe/.inputrc
-      become: no
-
-    - name: No caps
-      command: gsettings set org.gnome.desktop.input-sources xkb-options "['ctrl:nocaps']"
-      become: no
-
-    - name: Show log out
-      command: gsettings set org.gnome.shell always-show-log-out true
-      become: no
-
-    - name: Show date
-      command: gsettings set org.gnome.desktop.interface clock-show-date true
-      become: no
+  roles:
+    - init
+    - install-from-package-manager
+    - install-manually
+    - services
+    - zsh
+    - sdkman
+    - vim
+    - dotfiles
+    - desktop
