Fix invalid path

--- a/.zsh/.zshrc.env
+++ b/.zsh/.zshrc.env
@@ -171,4 +171,4 @@ function log_history {
 }
 
 # load user .zshrc configuration file
-[ -f ~/config/.zsh/.zshrc.local ] && source ~/config/.zsh/.zshrc.local
+[ -f ~/.zsh/.zshrc.local ] && source ~/.zsh/.zshrc.local
