--- a/roles/install-from-package-manager/tasks/main.yml
+++ b/roles/install-from-package-manager/tasks/main.yml
@@ -40,6 +40,7 @@
     - http://download.skype.com/linux/skype-4.3.0.37-fedora.i586.rpm
     - sysstat
     - tuned
+    - unar
     - unzip
     - https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1_x86_64.rpm
     - vim
