--- a/roles/install-from-package-manager/tasks/main.yml
+++ b/roles/install-from-package-manager/tasks/main.yml
@@ -29,6 +29,7 @@
     - google-chrome-stable
     - hexchat
     - ibus-mozc
+    - iostat
     - java-1.8.0-openjdk-devel
     - java-1.8.0-openjdk-debuginfo
     - java-1.8.0-openjdk-src
