--- a/roles/install-manually/tasks/main.yml
+++ b/roles/install-manually/tasks/main.yml
@@ -17,6 +17,12 @@
   copy: src=./idea/idea64.vmoptions dest=~/opt/idea/bin/idea64.vmoptions
   become: no
 
+- name: Download Docker Compose
+  get_url: url=https://github.com/docker/compose/releases/download/1.7.1/docker-compose-Linux-x86_64 dest=/usr/local/bin/docker-compose
+
+- name: Change mode Docker Compose
+  file: path=/usr/local/bin/docker-compose mode=0755
+
 - name: Download peco
   get_url: url=https://github.com/peco/peco/releases/download/v0.3.5/peco_linux_amd64.tar.gz dest=/tmp/peco.tar.gz
 
