--- a/roles/install-from-package-manager/tasks/main.yml
+++ b/roles/install-from-package-manager/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Add adobe repo
   dnf: name=http://linuxdownload.adobe.com/adobe-release/adobe-release-x86_64-1.0-1.noarch.rpm
 
-# - name: Add dropbox repo
-#   copy: src=./repos/dropbox.repo dest=/etc/yum.repos.d/dropbox.repo
+- name: Add dropbox repo
+  copy: src=./repos/dropbox.repo dest=/etc/yum.repos.d/dropbox.repo
 
 - name: Add google-chrome repo
   copy: src=./repos/google-chrome.repo dest=/etc/yum.repos.d/google-chrome.repo
@@ -21,7 +21,7 @@
   with_items:
     - /tmp/atom.rpm
     - docker
-    - https://www.dropbox.com/download?dl=packages/fedora/nautilus-dropbox-2015.10.28-1.fedora.x86_64.rpm
+    - nautilus-dropbox
     - flash-plugin
     - gcc
     - git
